<resources>
    <string name="app_name">TinderClone</string>
    <string name="tinder_clone_logo_description">Tinder Clone Logo</string>
    <string name="startup_button_login">Login</string>
    <string name="startup_button_signup">Sign up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="matches">matches</string>
    <string name="messages">messages</string>
    <string name="profile">profile</string>
    <string name="wave">wave</string>
    <string name="user_image">user image</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="semicircle">semicircle</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="your_gender">My gender</string>
    <string name="icon_for_your_gender_field">icon for your gender field</string>
    <string name="interested_in">Interested in</string>
    <string name="apply">Apply</string>
    <string name="sign_out">Sign out</string>
    <string name="error_profile_incomplete">Please fill all the fields</string>
    <string name="no_available_users_image">no available users image</string>
    <string name="there_is_no_users_left_to_swipe">There is no users left to swipe</string>
    <string name="like_button">like button</string>
    <string name="dislike_button">dislike button</string>
</resources>