<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">


    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="@dimen/standard_width"
        android:layout_height="@dimen/standard_height"
        android:layout_marginTop="32dp"
        android:autofillHints="true"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="@dimen/standard_width"
        android:layout_height="@dimen/standard_height"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/email_edit_text"
        app:layout_constraintStart_toStartOf="@+id/email_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_text"
        android:autofillHints="true" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="@dimen/standard_width"
        android:layout_height="@dimen/standard_height"
        style="@style/StandardButton"
        android:layout_marginTop="16dp"
        android:text="@string/startup_button_login"
        app:layout_constraintEnd_toEndOf="@+id/password_edit_text"
        app:layout_constraintStart_toStartOf="@+id/password_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>