<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef"
    tools:context=".fragments.MatchesFragment">

    <com.lorentzos.flingswipe.SwipeFlingAdapterView
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rotation_degrees="15.5">

    </com.lorentzos.flingswipe.SwipeFlingAdapterView>


    <ImageButton
        android:id="@+id/dislike_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="84dp"
        android:width="50dp"
        android:background="@drawable/dislike"
        android:backgroundTint="@null"
        android:clickable="true"
        android:contentDescription="@string/dislike_button"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/like_button"
        tools:ignore="RedundantDescriptionCheck" />

    <ImageButton
        android:id="@+id/like_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="84dp"
        android:width="50dp"
        android:background="@drawable/like"
        android:backgroundTint="@null"
        android:clickable="true"
        android:contentDescription="@string/like_button"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dislike_button"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RedundantDescriptionCheck,ImageContrastCheck" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/no_users_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23000002">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/no_users_image_view"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:contentDescription="@string/no_available_users_image"
                android:scaleType="fitXY"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/oh_no" />

            <TextView
                android:id="@+id/no_users_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/there_is_no_users_left_to_swipe"
                android:textColor="#777"
                android:textSize="32sp"
                app:layout_constraintLeft_toLeftOf="@id/no_users_image_view"
                app:layout_constraintRight_toRightOf="@id/no_users_image_view"
                app:layout_constraintTop_toBottomOf="@id/no_users_image_view" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/content_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="like_button,frame,dislike_button" />

</androidx.constraintlayout.widget.ConstraintLayout>